--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "apollo-link-http": "~1.5.16",
     "apollo-link-persisted-queries": "~0.2.2",
     "axios": "~0.19.0",
-    "bootstrap": "^4.3.1",
     "graphql": "~14.5.7",
     "graphql-tag": "~2.10.1",
     "i18next": "~19.3.2",
@@ -66,12 +65,16 @@
     "chalk": "~2.4.2",
     "chokidar": "~3.1.1",
     "cross-env": "~6.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-yaml": "^0.2.0",
     "graphql.macro": "~1.4.2",
     "html-loader": "~0.5.5",
     "http-proxy-middleware": "~0.20.0",
     "ngrok": "^3.2.5",
     "npm-run-all": "~4.1.5",
     "null-loader": "~3.0.0",
+    "prettier": "^2.0.5",
     "speed-measure-webpack-plugin": "^1.3.1",
     "stats-webpack-plugin": "^0.7.0",
     "url-loader": "~2.1.0",
