--- a/data/routes/en.yml
+++ b/data/routes/en.yml
@@ -59,3 +59,6 @@ placeholders:
               <li>Delete <code>/data/dictionary/*.yml</code></li>
             </ol>
           </div>
+    - componentName: NestedComponent
+      fields: 
+        heading: I am a nested component
