--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "apollo-link-http": "~1.5.16",
     "apollo-link-persisted-queries": "~0.2.2",
     "axios": "~0.19.0",
+    "deep-equal": "^2.0.5",
     "graphql": "~14.5.7",
     "graphql-tag": "~2.10.1",
     "i18next": "~19.3.2",
