--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "serialize-javascript": "~2.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.10.4",
     "@babel/register": "~7.6.2",
     "@sitecore-jss/sitecore-jss-cli": "^11.0.2",
     "@sitecore-jss/sitecore-jss-dev-tools": "^11.0.2",
